[package]
name = "solana-anchor-metaplex-mint-sell-nfts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_anchor_metaplex_mint_sell_nfts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
# spl-token-2022 = "0.4.2"
mpl-token-metadata = { version = "1.3.3", features = [ "no-entrypoint" ] }
